--- a/AhorraYa.Client/Views/_ViewImports.cshtml
+++ b/AhorraYa.Client/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using AhorraYa.Client.Models
 @using AhorraYa.WebClient.ViewModels.Category
 @using AhorraYa.Entities
+@using AhorraYa.WebClient.ViewModels.Brand
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
