--- a/AhorraYa.Client/Views/Shared/_Layout.cshtml
+++ b/AhorraYa.Client/Views/Shared/_Layout.cshtml
@@ -24,10 +24,10 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Products" asp-action="Index">Product</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Brands" asp-action="Index">Brand</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Brands" asp-action="Index">Brands</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Localities" asp-action="Index">Localities</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Shops" asp-action="Index">Shop</a></li>
+                        <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Shops" asp-action="Index">Shops</a></li>
                         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Index">Customer</a></li>
 
 
